2005-03-17  Mark D. Baushke  <mdb@cvshome.org>

	* admin.c (postadmin_proc): Cast NULL when it is an argument to
	stdarg function to ensure it is the correct type.
	* commit.c (precommit_proc): Ditto.
	* edit.c (notify_proc): Ditto.
	* fileattr.c (postwatch_proc): Ditto.
	* logmsg.c (logfile_write, verifymsg_proc): Ditto.
	* server.c (prepost_proxy_proc): Ditto.
	* subr.c (cmdlineescape): Ditto.
	* tag.c (posttag_proc): Ditto.
	(Thanks to a report from Derek Price <derek@ximbiot.com>.)
	
2005-03-17  Derek Price  <derek@ximbiot.com>

	* rcs.h (RCSNode): Improve comment.
	* rcs.c (RCS_head): Ditto, plus gratuitous reformatting.

2005-03-17  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_deltas): Use rcs->print_path.

2005-03-17  Derek Price  <derek@ximbiot.com>

	* commit.c (checkaddfile): Avoid dereferencing a NULL pointer in
	response to a rare error.
	* admin.c (admin_fileproc), log.c (log_expand_revlist), mkmodules.c
	(checkout_file), rcs.c (RCS_getdate, RCS_deltas, RCS_findlock_or_tip,
	RCS_tag2rev): Avoid dereferencing NULL pointer.
	(Thanks to report from Alen Zukich <alen.zukich@klocwork.com>.)

2005-03-17  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_reparsercsfile): Avoid memory leak.
	(Thanks to report from Alen Zukich <alen.zukich@klocwork.com>.)

2005-03-17  Derek Price  <derek@ximbiot.com>

	* log.c (log_expand_revlist): Suppress message and not error handling
	when really_quiet.

2005-03-16  Mark D. Baushke  <mdb@cvshome.org>

	* buffer.c (fd_buffer_shutdown): Replace (int *) 0 with NULL.
	* server.c (do_cvs_command): Ditto.

	* client.c (update_entries): Use xnmalloc.

	* checkin.c (Checkin): Replace (char *) 0 with NULL.
	* patch.c (patch_fileproc): Ditto.
	* update.c (update_fileproc): Ditto.
	* no_diff.c (No_Difference): Ditto.
	* patch.c (patch_fileproc): Ditto.
	* rcscmds.c (call_diff_setup, call_diff_add_arg): Ditto.

	* update.c (join_file): Replace (RCSCHECKOUTPROC)0 with NULL.
	* rcs.c (RCS_checkin, RCS_cmp_file, RCS_delete_revs) 